--- a/index.html
+++ b/index.html
@@ -141,3 +141,9 @@
     <h1 id="pageTitle">JIO Tv</h1> <!-- Added id to the h1 -->
 
     <iframe id="channelFrame" allowfullscreen allow="fullscreen"></iframe> <!-- Moved iframe to the top -->
+
+    <div class="search-input">
+        <label for="search">Search Channels:</label>
+        <input type="text" id="search" name="search" placeholder="Enter channel name...">
+    </div>
+    
