--- a/index.html
+++ b/index.html
@@ -347,7 +347,11 @@
 			    </div>
 
 
-
+<a href="https://www.bigcric.me/api.html?channel=Manoranjan%20Grand" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Manoranjan%20Grand.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Manoranjan Grand</h2>
+			    </div>
 
 
 
