--- a/index.html
+++ b/index.html
@@ -340,18 +340,61 @@
         <!-- add here -->
         <div class="site-grid" id="lifestyle-channels">
 
-<a href="Zee Yuva.html" class="site-card">
-                    <img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Zee_Yuva.png"" alt="Tata Play Beauty">
-                    <div class="site-info">
-                        <h2>Zee Yuva</h2>
-			    </div>
-
-
 <a href="https://www.bigcric.me/api.html?channel=Manoranjan%20Grand" class="site-card">
                     <img src="https://tata-logos.pages.dev/logos/Manoranjan%20Grand.webp"" alt="OFFLINE ™">
                     <div class="site-info">
                         <h2>Manoranjan Grand</h2>
 			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=Tata%20Play%20Bollywood%20Premiere" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Tata%20Play%20Bollywood%20Premiere.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Tata Play Bollywood Premiere</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=Tata%20Play%20Hollywood%20Local" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Tata%20Play%20Hollywood%20Local.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Tata Play Hollywood Local</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=STAR%20GOLD%20HD" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/STAR%20GOLD%20HD.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>STAR GOLD HD</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=SONY%20MAX%20HD" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/SONY%20MAX%20HD.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>SONY MAX HD</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=SONY%20MAX" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/SONY%20MAX.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>SONY MAX</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=Tata%20Play%20Classic%20Cinema%202" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Tata%20Play%20Classic%20Cinema%202.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Tata Play Classic Cinema 2</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=Zee%20Cinema%20HD" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Zee%20Cinema%20HD.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Zee Cinema HD</h2>
+			    </div>
+
+<a href="https://www.bigcric.me/api.html?channel=Tata%20Play%20Classic%20Cinema" class="site-card">
+                    <img src="https://tata-logos.pages.dev/logos/Tata%20Play%20Classic%20Cinema.webp"" alt="OFFLINE ™">
+                    <div class="site-info">
+                        <h2>Tata Play Classic Cinema</h2>
+			    </div>
+
+
 
 
 
