--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <div class="container" id="channelsList">
-        <div class="channel" data-category="Hindi" onclick="openChannel('Zee Yuva.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Zee_Yuva.png" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">Zee Yuva</div></div></div>
+        <div class="channel" data-category="" onclick="openChannel('Sun Marathi.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Zee_Yuva.png" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">Zee Yuva</div></div></div>
 
 
 
