--- a/index.html
+++ b/index.html
@@ -158,7 +158,51 @@
     <div class="container" id="channelsList">
         <div class="channel" data-category="" onclick="openChannel('Sun Marathi.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Zee_Yuva.png" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">Zee Yuva</div></div></div>
 
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/125944/1000x1000_SunMarathi_125944_e3509fd3-b30c-436d-ba5c-343e7bae433f.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Marathi  </div></div></div>
 
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/65jLjybq/Sun-TV-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/N0gsKjY8/KTV-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">KTV HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Music HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/B6Pn0w4R/Sun-Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotvimages.cdn.jio.com/dare_images/images/And_Pictures_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/1tVwjHT3/Gemini-Movies-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/Hszc3Rxt/Gemini-Music-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Music HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/XYDZ659G/Gemini-Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Comedy</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Life</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Comedy</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Movies</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Music</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Comedy</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya HD</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Movies</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Music</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/9023/1000x1000_AdithyaTV_9023_9ca552af-c71b-41c2-a9a7-c6597fe694cf.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Adithya TV</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26577/1000x1000_ChintuTV_26577_d9109d1a-0110-4c8f-8bc2-5dba4a758167.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chintu TV</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26571/1000x1000_KushiTV_26571_ef287cac-6e6f-4cc7-96e1-b92160acb927.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kushi TV</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26573/1000x1000_KochuTV_26573_9481a434-18ca-4780-a469-a205154eab64.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kochu TV</div></div></div>
+
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26567/1000x1000_ChuttiTV_26567_9e566862-4ddb-4fea-90b6-1710aa5116fe.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chutti TV</div></div></div>
 
 
 
