--- a/index.html
+++ b/index.html
@@ -155,26 +155,24 @@
         <input type="text" id="search" name="search" placeholder="Search...">
     </div>
 
-    <div class="container" id="channelsList">
-        <div class="channel" data-category="" onclick="openChannel('Sun Marathi.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Zee_Yuva.png" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">Zee Yuva</div></div></div>
-
+    
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/125944/1000x1000_SunMarathi_125944_e3509fd3-b30c-436d-ba5c-343e7bae433f.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Marathi  </div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/65jLjybq/Sun-TV-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/N0gsKjY8/KTV-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">KTV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/KTV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">KTV HD</div></div></div>
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Music HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/B6Pn0w4R/Sun-Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotvimages.cdn.jio.com/dare_images/images/And_Pictures_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/1tVwjHT3/Gemini-Movies-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Movies_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/Hszc3Rxt/Gemini-Music-HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Music HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Music HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://i.postimg.cc/XYDZ659G/Gemini-Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Comedy</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Comedy</div></div></div>
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Life</div></div></div>
 
