--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>JIO Tv+</title>
+    <title>Sunnxt</title>
     <meta charset="utf-8">
     <meta name="description" content=" LIVE TV">
     <meta name="keywords" content="OFFLINE ™ Live Tv">
     <meta name="author" content="OFFLINE ™">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq354yqArVAtJXJB_3coDdfxwg2G6RImd1IFrh3iN5nGN8k7bwmOlbdBo&s=10">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/kGpSqrh/Screenshot-2024-05-29-194030.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -138,24 +138,25 @@
     </style>
 </head>
 <body>
-    <h1 id="pageTitle">JIO Tv+</h1> <!-- Added id to the h1 -->
+    <h1 id="pageTitle">Sunnex</h1> <!-- Added id to the h1 -->
 
     <iframe id="channelFrame" allowfullscreen allow="fullscreen"></iframe> <!-- Moved iframe to the top -->
 
     <div class="category-dropdown">
-        <label for="category">Select Category </label>
+        <label for="category">Select Category 👇</label>
         <select id="category">
             <option value="">All</option>
            
- </div>
-
+</div>
 
     <div class="search-input">
         <label for="search">Search Channels:</label>
-        <input type="text" id="search" name="search" placeholder="Search...">
+        <input type="text" id="search" name="search" placeholder="Enter channel name.🥰">
     </div>
 
-    
+    <div class="container" id="channelsList">
+        <div class="channel" data-category="" onclick="openChannel('https://t.me/VIP4k_TV')"><img src="https://gifdb.com/images/high/telegram-cute-blue-shades-logo-vsjoshidc3e9gylv.gif" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">JOIN TELEGRAM</div></div></div>
+
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/125944/1000x1000_SunMarathi_125944_e3509fd3-b30c-436d-ba5c-343e7bae433f.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Marathi  </div></div></div>
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
@@ -166,7 +167,7 @@
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotvimages.cdn.jio.com/dare_images/images/And_Pictures_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Movies_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
 
@@ -202,14 +203,12 @@
 
 <div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26567/1000x1000_ChuttiTV_26567_9e566862-4ddb-4fea-90b6-1710aa5116fe.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chutti TV</div></div></div>
 
-
-
-<script>
+      <script>
         // Display a pop-up message when the page starts
         window.addEventListener("load", function() {
-            var result = window.confirm("Join @VIP4k_TV for more updates?");
+            var result = window.confirm("Join @Mr Smart IPTV for more updates?");
             if (result) {
-                window.location.href = "https://t.me/VIP4k_TV";
+                window.location.href = "https://t.me/mr_smart_iptv";
             }
         });
 
@@ -252,4 +251,4 @@
         }
     </script>
 </body>
-</html>            
+</html>    
