--- a/index.html
+++ b/index.html
@@ -138,16 +138,11 @@
     </style>
 </head>
 <body>
-    <h1 id="pageTitle">Sunnex</h1> <!-- Added id to the h1 -->
+    <h1 id="pageTitle">SUNNXT</h1> <!-- Added id to the h1 -->
 
     <iframe id="channelFrame" allowfullscreen allow="fullscreen"></iframe> <!-- Moved iframe to the top -->
 
-    <div class="category-dropdown">
-        <label for="category">Select Category 👇</label>
-        <select id="category">
-            <option value="">All</option>
-           
-</div>
+    
 
     <div class="search-input">
         <label for="search">Search Channels:</label>
@@ -157,51 +152,51 @@
     <div class="container" id="channelsList">
         <div class="channel" data-category="" onclick="openChannel('https://t.me/VIP4k_TV')"><img src="https://gifdb.com/images/high/telegram-cute-blue-shades-logo-vsjoshidc3e9gylv.gif" alt="OFFLINE™" loading="lazy"><div class="channel-details"><div class="channel-name">JOIN TELEGRAM</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/125944/1000x1000_SunMarathi_125944_e3509fd3-b30c-436d-ba5c-343e7bae433f.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Marathi  </div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Sun Marathi.html')"><img src="https://sund-images.sunnxt.com/125944/1000x1000_SunMarathi_125944_e3509fd3-b30c-436d-ba5c-343e7bae433f.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Marathi  </div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Sun Tv HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun TV HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/KTV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">KTV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('KTV HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/KTV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">KTV HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Music HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Sun Music HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Music HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Sun Life.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Sun Life</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Gemini HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_TV_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini TV HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Movies_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Gemini Movies HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Movies_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Movies HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Music HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Gemini Music HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Music_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Music HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Comedy</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Gemini Comedy.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Comedy</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Life</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Gemini Life.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Life.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Gemini Life</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Surya Hd.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Comedy</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Surya Comedy.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Comedy</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Movies</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Surya Movies.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Movies</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Music</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Surya Music.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Surya Music</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Comedy</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Udaya Comedy.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Comedy.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Comedy</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya HD</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Udaya HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_HD.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya HD</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Movies</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Udaya Movies.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Movies.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Movies</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Music</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Udaya Music.html')"><img src="https://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Music.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Udaya Music</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/9023/1000x1000_AdithyaTV_9023_9ca552af-c71b-41c2-a9a7-c6597fe694cf.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Adithya TV</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Adithya TV.html')"><img src="https://sund-images.sunnxt.com/9023/1000x1000_AdithyaTV_9023_9ca552af-c71b-41c2-a9a7-c6597fe694cf.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Adithya TV</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26577/1000x1000_ChintuTV_26577_d9109d1a-0110-4c8f-8bc2-5dba4a758167.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chintu TV</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Chintu TV.html')"><img src="https://sund-images.sunnxt.com/26577/1000x1000_ChintuTV_26577_d9109d1a-0110-4c8f-8bc2-5dba4a758167.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chintu TV</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26571/1000x1000_KushiTV_26571_ef287cac-6e6f-4cc7-96e1-b92160acb927.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kushi TV</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Kushi TV.html')"><img src="https://sund-images.sunnxt.com/26571/1000x1000_KushiTV_26571_ef287cac-6e6f-4cc7-96e1-b92160acb927.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kushi TV</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26573/1000x1000_KochuTV_26573_9481a434-18ca-4780-a469-a205154eab64.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kochu TV</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Kochu TV.html')"><img src="https://sund-images.sunnxt.com/26573/1000x1000_KochuTV_26573_9481a434-18ca-4780-a469-a205154eab64.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Kochu TV</div></div></div>
 
-<div class="channel" data-category="" onclick="openChannel('And Pictures HD.html')"><img src="https://sund-images.sunnxt.com/26567/1000x1000_ChuttiTV_26567_9e566862-4ddb-4fea-90b6-1710aa5116fe.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chutti TV</div></div></div>
+<div class="channel" data-category="" onclick="openChannel('Chutti TV.html')"><img src="https://sund-images.sunnxt.com/26567/1000x1000_ChuttiTV_26567_9e566862-4ddb-4fea-90b6-1710aa5116fe.png" alt="OFFLINE ™" loading="lazy"><div class="channel-details"><div class="channel-name">Chutti TV</div></div></div>
 
       <script>
         // Display a pop-up message when the page starts
