--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sunnxt</title>
+    <title>DISCOVERY</title>
     <meta charset="utf-8">
     <meta name="description" content=" LIVE TV">
     <meta name="keywords" content="OFFLINE ™ Live Tv">
     <meta name="author" content="OFFLINE ™">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/kGpSqrh/Screenshot-2024-05-29-194030.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTyBImbZj1dV_SiZhvPkDH6wRnZHbPiD9Xg5AO3RsxMhQ55xg5w0e5cSw&s=10">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -138,7 +138,7 @@
     </style>
 </head>
 <body>
-    <h1 id="pageTitle">SUNNXT</h1> <!-- Added id to the h1 -->
+    <h1 id="pageTitle">DISCOVERY</h1> <!-- Added id to the h1 -->
 
     <iframe id="channelFrame" allowfullscreen allow="fullscreen"></iframe> <!-- Moved iframe to the top -->
 
